Changes after KOffice-1.3
=========================
Allow to build with automake-1.8

KOfficeCore:
- Changed .desktop file setup so that changes to the K menu structure,
  to file-program associations, or other distribution customizations cannot
  prevent KOffice applications from starting.
- Fixed parsing of number+unit, due to change in Qt 3.3. Fixes problems
  when opening OOWriter documents in particular.
- Don't show the filter dialog when generating thumbnails
- Improved error handling to catch "partition full" problems.

KOfficeUI:
- Fix overwriting of templates (#73537)
- Fix loading icons when creating templates
- Allow template icons up to 64x64 instead of 60x60 and scale better if too big

KoText:
- Date variables for printing-date, last-modified, and creation-date were
  not loaded correctly.
- Background spellchecking works again
- Fixed crash during background spellchecking (refcounting of formats)
- Fixed race condition during background spellchecking (leading to misplaced red underlines)
- Repaint paragraph after bg spell checking, in all cases (errors or not),
  otherwise newly-added-to-the-dictionary words were still red-underlined (#56506).
- Fixed hyphenation checkbox not correctly set in font dialog
- Fixed wrong hyphenation in many cases, due to wrong word sent to hyphenation engine
- Font dialog usability: turn radiobuttons superscript/subscript into
  checkboxes to make it possible to deactivate both.
- Usability in style dialog: when creating a new style, select it as the
  'next style' for itself (#45868).
- Allow decimal values in "multiply" (proportional) linespacing.
- Fixed wrong left margin on multiline paragraphs with a counter.

KoSpell:
- Improved configure check for libaspell
- Fixed confusion with ispell's dictionaries which made it forget the chosen dictionary (#71002)
- Fixed multiple connections in spell dialog, which made it skip some words (#75532)
- Use ISO-8859-1 with ispell if the user has chosen ISO-8859-15 (#33108)