@@ -1,5 +1,11 @@
-Changes after KOffice-1.3
-=========================
+Changes between KOffice-1.3.1 and KOffice-1.3.2
+===============================================
+KoText:
+- Changing a style in the style manager remembered a wrong "following style",
+  so later changes in the style manager wouldn't propagate correctly (#47377)
+
+Changes between KOffice-1.3 and KOffice-1.3.1
+=============================================
 Allow to build with automake-1.8
 
 KOfficeCore:
